--- a/nextmagpie-main/package.json
+++ b/nextmagpie-main/package.json
@@ -12,10 +12,9 @@
     "@ant-design/cssinjs": "^1.18.1",
     "@ant-design/icons": "^5.2.6",
     "@emailjs/browser": "^4.1.0",
-    "@next/third-parties": "^15.0.1",
     "@sanity/image-url": "^1.0.2",
     "antd": "^5.12.5",
-    "next": "^15.0.1",
+    "next": "14.1",
     "next-sanity": "^7.0.17",
     "react": "^18",
     "react-dom": "^18",
